# hootswitch

./: .gitignore  README.md
firmware/: CMakeLists.txt  FreeRTOSConfig.h  bus.c  bus.h  bus.pio  button.c  button.h  buzzer.c  buzzer.h  computer.c  computer.h  debug.c  debug.h  device.c  device.h  driver.c  driver.h  handler.c  handler.h  hardware.h  host.c  host.h  host_err.h  host_sync.c  host_sync.h  led.c  led.h  main.c  manager.c  manager.h  relay.c  relay.h  util.c  util.h
firmware/drivers/: CMakeLists.txt  keyboard.c  keyboard.h  mouse.c  mouse.h  serial.c  serial.h  testdrv.c  testdrv.h
firmware/usb/: CMakeLists.txt  tusb_config.h  usb.c  usb.h  usb_descriptors.c
flybywire/: README.md  flybywire.css  flybywire.js  index.html  keyboard-capture.css  keyboard-capture.js
hardware/: .gitignore  CHANGES.txt  README.md  bom-full.csv  bom-manufacturing.csv  fp-lib-table  hootswitch-computers.kicad_sch  hootswitch.kicad_pcb  hootswitch.kicad_pro  hootswitch.kicad_sch  hootswitch.kicad_sym  sym-lib-table
hardware/gerbers/: hootswitch-B_Cu.gbl  hootswitch-B_Mask.gbs  hootswitch-B_Paste.gbp  hootswitch-B_Silkscreen.gbo  hootswitch-Edge_Cuts.gm1  hootswitch-F_Cu.gtl  hootswitch-F_Mask.gts  hootswitch-F_Paste.gtp  hootswitch-F_Silkscreen.gto  hootswitch-NPTH-drl_map.gbr  hootswitch-NPTH.drl  hootswitch-PTH-drl_map.gbr  hootswitch-PTH.drl  hootswitch-top-pos.csv
hardware/hootswitch.pretty/: 5749181-1.kicad_mod  hootswitch.kicad_mod
hardware/rpi/: LICENSE  MCU_RaspberryPi_and_Boards.kicad_sym  README.md  RPi_Pico.kicad_sym
